# armadillo

./: .gitignore  Cargo.toml  LICENSE  README.md  flake.nix  rust-toolchain.toml
.github/workflows/: ci.yml  release.yml
armadillo-relay/: Cargo.toml  README.md
armadillo-relay/src/: client.rs  relay.rs  share_code.rs  tls.rs
plugin/: .gitignore  build.gradle.kts  settings.gradle.kts
plugin/src/main/java/rs/luiz/hytale/offline_mode/: AuthBypass.java  OfflineModePlugin.java
plugin/src/main/resources/: manifest.json
src/: auth.rs  client.rs  crypto.rs  handshake.rs  hytale.rs  io.rs  lib.rs  main.rs  packets.rs  protocol.rs  relay.rs  server.rs  server_handshake.rs  share_code.rs  tls.rs
src/auth/: jwt.rs  oauth.rs  session.rs
src/hytale/: handshake.rs  packets.rs
src/hytale/packets/: auth.rs
src/packets/: auth_packets.rs  connect.rs  io.rs
