[package]
name = "armadillo"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

flate2 = "1.0"
base64 = "0.22"

uuid = { version = "1.11", features = ["v4"] }
hostname = "0.4"
time = { version = "0.3", features = ["formatting"] }

anyhow = "1.0"

clap = { version = "4.5", features = ["derive", "env"] }

tokio = { version = "1.36", features = ["full"] }

quinn = "0.11"
rustls = { version = "0.23", default-features = false, features = ["ring"] }
rcgen = "0.14"
dashmap = "6.1"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
