[workspace]
members = [".", "armadillo-relay"]

[package]
name = "armadillo"
version = "0.1.0"
edition = "2024"

[dependencies]
aes-gcm = "0.10.3"
anyhow = "1.0.100"
base64 = "0.22.1"
bytes = "1.11.0"
chrono = "0.4.43"
clap = { version = "4.5.54", features = ["derive", "env"] }
ed25519-dalek = "2.2.0"
hex = "0.4.3"
pbkdf2 = "0.12.2"
quinn = "0.11.9"
rcgen = "0.14.6"
regex = "1.12.2"
reqwest = { version = "0.13.1", default-features = false, features = ["json", "rustls"] }
rustls = { version = "0.23.36", default-features = false, features = ["aws-lc-rs"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.10.9"
tokio = { version = "1.49.0", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
urlencoding = "2.1.3"
uuid = { version = "1.19.0", features = ["v4"] }
